# whir

./: .gitignore  Cargo.toml  LICENSE-MIT  PREFOLD_SIMPLIFIED_PLAN.md  README.md  rustfmt.toml  typos.toml  zk poly log.md
.claude/: settings.json
.devcontainer/: devcontainer.json  post_create_command.sh
.github/workflows/: codspeed.yml  rust.yml
benches/: compress.rs  expand_from_coeff.rs  sumcheck.rs  transpose_square_swap.rs  whir.rs  whir_zk.rs  zk_whir.rs  zk_whir.rs.disabled
cli/: Cargo.toml
cli/benches/: expand_from_coeff.rs  sumcheck.rs
cli/src/: main.rs
cli/tests/: batching.rs  proof_lifecycle.rs
common/: Cargo.toml
common/src/: cmdline_utils.rs  domain.rs  fs_utils.rs  lib.rs  utils.rs
common/src/crypto/: fields.rs
common/src/crypto/merkle_tree/: blake3.rs  digest.rs  keccak.rs  mod.rs  parameters.rs  proof.rs
common/src/ntt/: cooley_tukey.rs  matrix.rs  mod.rs  test_utils.rs  transpose.rs  utils.rs  wavelet.rs
common/src/poly_utils/: coeffs.rs  evals.rs  fold.rs  mod.rs
common/src/sumcheck/: mod.rs  sumcheck_single.rs
common/src/whir/: domainsep.rs  merkle.rs  mod.rs  utils.rs
common/src/whir/committer/: mod.rs
proptest-regressions/protocols/: basecase.txt  code_switch.txt  mask_proximity.txt  sumcheck.txt
prover/: Cargo.toml
prover/src/: lib.rs  prover.rs
src/: alloc_track.rs  ark_rand.rs  ark_serde.rs  bits.rs  cmdline_utils.rs  domain.rs  engines.rs  errors.rs  fs_utils.rs  lib.rs  parameters.rs  smooth_domain.rs  type_info.rs  type_map.rs  utils.rs
src/algebra/: domain.rs  embedding.rs  fields.rs  mod.rs  multilinear.rs  multilinear_point.rs  old_weights.rs  solver.rs  sumcheck.rs  weights.rs
src/algebra/linear_form/: covector.rs  mod.rs  multilinear_evaluation.rs  multilinear_extension.rs  subfield_univariate_evaluation.rs  univariate_evaluation.rs
src/algebra/ntt/: cooley_tukey.rs  mod.rs  test_utils.rs  transpose.rs  utils.rs  wavelet.rs
src/algebra/poly_utils/: coeffs.rs  dense.rs  evals.rs  fold.rs  lagrange_iterator.rs  multilinear.rs
src/algebra/polynomials/: coeffs.rs  evals.rs  fold.rs  lagrange_iterator.rs  mod.rs  multilinear.rs
src/algebra/weights/: covector.rs  matrix_program.rs  mod.rs  multilinear_evaluation.rs  source_vector.rs  subfield_univariate_evaluation.rs  target_vector.rs  univariate_evaluation.rs
src/ceno_binding/: mod.rs  pcs.rs
src/crypto/: embedding.rs  fields.rs  mod.rs  ntt.rs  transcript.rs
src/crypto/merkle_tree/: blake2.rs  blake3.rs  digest.rs  keccak.rs  mock.rs  mod.rs  parameters.rs  proof.rs  sha3.rs
src/crypto/proof_of_work/: blake3_engine.rs  digest_engine.rs  mod.rs  none_engine.rs
src/evm_utils/: README.md  hasher.rs  mod.rs  proof_converter.rs  proof_serde.rs
src/evm_utils/data/: merkle_proof_output_1.json  merkle_proof_output_10_1.json  merkle_proof_output_10_10.json  merkle_proof_output_10_100.json  merkle_proof_output_20_1.json  merkle_proof_output_20_10.json  merkle_proof_output_20_100.json
src/hash/: blake3_engine.rs  copy_engine.rs  digest_engine.rs  hash_counter.rs  mod.rs
src/merkle_tree/: commit.rs  mod.rs  prove.rs  verify.rs
src/merkle_tree/hasher/: blake3.rs  digest.rs  mod.rs  skyscraper.rs
src/modular/: mod.rs
src/modular/transcript/: interaction.rs  mod.rs  transcript_pattern.rs  transcript_player.rs  transcript_recorder.rs
src/ntt/: cooley_tukey.rs  matrix.rs  mod.rs  ntt.rs  test_utils.rs  transpose.rs  utils.rs  wavelet.rs
src/poly_utils/: coeffs.rs  dense.rs  evals.rs  fold.rs  gray_lag_poly.rs  hypercube.rs  lag_poly.rs  lagrange_iterator.rs  mod.rs  multilinear.rs  sequential_lag_poly.rs  streaming_evaluation_helper.rs  univariate.rs
src/protocols/: audit_soundness_tests.rs  basecase.rs  challenge_geometric.rs  challenge_indices.rs  code_switch.rs  geometric_challenge.rs  irs_commit.rs  mask_proximity.rs  matrix_commit.rs  merkle_tree.rs  mod.rs  proof_of_work.rs  reed_solomon.rs  sumcheck.rs
src/protocols/merkle_tree/: digest.rs  mod.rs
src/protocols/proof_of_work/: blake3_engine.rs  digest.rs  digest_engine.rs  mod.rs  utils.rs
src/protocols/sumcheck/: ark_engine.rs  mod.rs  sumcheck_polynomial.rs  sumcheck_single.rs
src/protocols/whir/: batching.rs  committer.rs  config.rs  mod.rs  prover.rs  rounds.rs  verifier.rs  zk.rs
src/protocols/whir_zk/: api.rs  committer.rs  config.rs  mod.rs  prefold.rs  prover.rs  utils.rs  verifier.rs
src/stir_ldt/: committer.rs  domainsep.rs  iopattern.rs  mod.rs  parameters.rs  parsed_proof.rs  prover.rs  verifier.rs
src/stir_ldt/committer/: mod.rs  reader.rs  writer.rs
src/sumcheck/: mod.rs  proof.rs  prover_core.rs  prover_not_skipping.rs  prover_single.rs  sumcheck_polynomial.rs  sumcheck_single.rs  sumcheck_single_domainsep.rs  sumcheck_single_iopattern.rs
src/transcript/: codecs.rs  engines.rs  field.rs  mock_sponge.rs  mod.rs  protocol_id.rs
src/whir/: batching.rs  challenges.rs  committer.rs  config.rs  domainsep.rs  fs_utils.rs  iopattern.rs  merkle.rs  mod.rs  parameters.rs  parsed_proof.rs  prover.rs  statement.rs  stir_evaluations.rs  utils.rs  verifier.rs
src/whir/committer/: mod.rs  reader.rs  writer.rs
src/whir_ldt/: committer.rs  iopattern.rs  mod.rs  parameters.rs  prover.rs  verifier.rs
verifier/: Cargo.toml
verifier/src/: lib.rs  verifier.rs
