[workspace.package]
version = "0.1.0"
edition = "2021"

rust-version = "1.83.0"

[workspace]
resolver = "2"
members = ["prover", "verifier", "common", "cli"]

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
missing_safety_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
suboptimal_flops = "allow"
similar_names = "allow"
redundant_closure_for_method_calls = "allow"

[workspace.dependencies]
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["std"] }
blake3 = "1.5.0"
clap = { version = "4.4.17", features = ["derive"] }
common = { path = "common/" }
hex = "0.4.3"
itertools = "0.14"
postcard = { version = "1.1", features = ["alloc"] }
proptest = "1.0"
prover = { path = "prover/" }
rand = { version = "0.8" }
rayon = { version = "1.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
spongefish = { git = "https://github.com/arkworks-rs/spongefish", features = [
    "arkworks-algebra",
], rev = "ecb4f08373ed930175585c856517efdb1851fb47" }
spongefish-pow = { git = "https://github.com/arkworks-rs/spongefish", rev = "ecb4f08373ed930175585c856517efdb1851fb47" }
thiserror = "2.0"
tracing = { version = "0.1.41" }
verifier = { path = "verifier/" }

[profile.release]
debug = true

# This profile could be used for an onchain verifier, e.g. for Solana SBF, WASM, etc.
[profile.onchain]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
strip = "symbols"
